# cohort-profitability-case

./: .gitignore  README.md  main.py  model_implementation.py  pyproject.toml
notebooks/: 1-jq-exploratory-data-analysis.ipynb  2-feature-engineering.ipynb  3-model-training.ipynb
report/: README.md  REPORT.md
src/: config.py  data_manipulation.py  features.py  stratified_selection.py
src/data_loading/: __init__.py  load_data.py
src/dataset/: data_manipulation.py  expected_loss.py  stratified_selection.py
src/features/: __init__.py  cohort_features.py  feature_utils.py  loan_features.py
src/models/: __init__.py  example_usage.py  hybrid_roi_model.py  visualization.py
src/plot/: initial_default_rate_tolerance.py  roi.py
